Number changer fix
