# mfdc-nc/model/pool.model.go
@@ -10,9 +10,11 @@ type PoolNewRequest struct {
 }
 
 type PoolRedistribution struct {
-	Count      *int `json:"vendor_id,omitempty"`
-	FromPoolID *int `json:"from_pool_id,omitempty"`
-	ToPoolID   *int `json:"to_pool_id,omitempty"`
+	MoveCountNumbers *int `json:"move_count_numbers,omitempty"`
+	SrcPoolID        *int `json:"from_pool_id,omitempty"`
+	DstPoolID        *int `json:"to_pool_id,omitempty"`
+	TeamID           *int `json:"team_id,omitempty"`
+	VendorID         *int `json:"vendor_id,omitempty"`
 }
 
 type Pool struct {
@@ -25,8 +27,8 @@ type Pool struct {
 	CreatedAt     *time.Time `db:"created_at" json:"created_at,omitempty"`
 	FinishAt      *time.Time `db:"finish_at" json:"finish_at,omitempty"`
 	SubPoolBlock  *int       `db:"subpool_block" json:"block,omitempty"`
-	VendorID      *int       `db:"vendor_id" json:"-"`
-	TeamID        *int       `db:"team_id" json:"-"`
+	VendorID      *int       `db:"vendor_id" json:"vendor_id"`
+	TeamID        *int       `db:"team_id" json:"team_id"`
 	NumbersCount  *int       `db:"num_count" json:"num_count,omitempty"`
 	SubPoolsCount *int       `db:"subpool_count" json:"subpool_count,omitempty"`
 }
